--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2021"
 
 [dependencies]
 rust-p2p-core = {git = "https://github.com/rustp2p/rustp2p-core"}
+anyhow = "1.0.86"
+async-trait = "0.1.82"
+tokio = { version = "1.39.2", features = ["full"] }
+log = "0.4.17"
