--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,16 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rust-p2p-core = {git = "https://github.com/rustp2p/rustp2p-core"}
+rust-p2p-core = { git = "https://github.com/rustp2p/rustp2p-core" }
 anyhow = "1.0.86"
 async-trait = "0.1.82"
 tokio = { version = "1.39.2", features = ["full"] }
 log = "0.4.17"
 thiserror = "1.0.63"
+protobuf = { version = "3.5.1", features = ["bytes"] }
+bytes = "1.7.1"
+
+
+[build-dependencies]
+protobuf-codegen = "3.5.1"
+protoc-bin-vendored = "3.0.0"
