--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ anyhow = "1.0.86"
 async-trait = "0.1.82"
 tokio = { version = "1.39.2", features = ["full"] }
 log = "0.4.17"
+thiserror = "1.0.63"
