--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ thiserror = "1.0.63"
 protobuf = { version = "3.5.1", features = ["bytes"] }
 bytes = "1.7.1"
 crossbeam-utils = "0.8"
+parking_lot = "0.12"
 
 [build-dependencies]
 protobuf-codegen = "3.5.1"
