--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,12 @@ parking_lot = "0.12"
 [build-dependencies]
 protobuf-codegen = "3.5.1"
 protoc-bin-vendored = "3.0.0"
+
+[dev-dependencies]
+clap = { version = "4.5.13", features = ["derive"] }
+log = "0.4.22"
+env_logger = "0.11.5"
+
+[[example]]
+name = "node"
+path = "examples/node.rs"
