--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ protobuf = { version = "3.5.1", features = ["bytes"] }
 bytes = "1.7.1"
 crossbeam-utils = "0.8"
 parking_lot = "0.12"
+dashmap = "6.1"
+
 
 [build-dependencies]
 protobuf-codegen = "3.5.1"
