--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ bytes = "1.7.1"
 crossbeam-utils = "0.8"
 parking_lot = "0.12"
 dashmap = "6.1"
-
+rand = "0.8.5"
 
 [build-dependencies]
 protobuf-codegen = "3.5.1"
