--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,34 +1,16 @@
-[package]
-name = "rustp2p"
-version = "0.1.0"
-edition = "2021"
-license = "Apache-2.0"
-repository = "https://github.com/rustp2p/rustp2p"
+[workspace]
+resolver = "2"
+members = [
+	"crates/*"
+]
 
-[dependencies]
-rust-p2p-core = { path = "rustp2p-core", version = "0.1" }
+[workspace.dependencies]
 anyhow = "1.0.86"
-async-trait = "0.1.82"
-tokio = { version = "1.39.2", features = ["full"] }
-log = "0.4.17"
 thiserror = "1.0.63"
-protobuf = { version = "3.5.1", features = ["bytes"] }
-bytes = "1.7.1"
-crossbeam-utils = "0.8"
+tokio = { version = "1.39.2", features = ["full"] }
+async-trait = "0.1.81"
+log = "0.4.17"
 parking_lot = "0.12"
+bytes = "1.7.1"
 dashmap = "6.1"
 rand = "0.8.5"
-
-[build-dependencies]
-protobuf-codegen = "3.5.1"
-protoc-bin-vendored = "3.0.0"
-
-[dev-dependencies]
-clap = { version = "4.5.13", features = ["derive"] }
-log = "0.4.22"
-env_logger = "0.11.5"
-tun-rs = { version = "1.0.3", features = ["async"] }
-
-[[example]]
-name = "node"
-path = "examples/node.rs"
