--- a/crates/rustp2p-core/Cargo.toml
+++ b/crates/rustp2p-core/Cargo.toml
@@ -8,24 +8,23 @@ description = "Simple, fast and easy Nat traversal for peer-to-peer"
 repository = "https://github.com/rustp2p/rustp2p"
 
 [dependencies]
-anyhow = "1.0.82"
-log = "0.4.17"
-parking_lot = "0.12.1"
-
-bytes = "1.7.1"
+anyhow = {workspace = true}
+log = { workspace = true }
+parking_lot = { workspace = true }
+tokio = { workspace = true }
+bytes = { workspace = true }
+dashmap = { workspace = true }
+async-trait = {workspace = true}
+thiserror =  {workspace = true}
+rand = { workspace = true }
 socket2 = { version = "0.5.7", features = ["all"] }
 network-interface = "2.0.0"
 futures = "0.3.30"
 tokio-util = { version = "0.7.11", features = ["full"] }
-tokio = { version = "1.39.2", features = ["full"] }
 crossbeam-utils = "0.8"
-rand = "0.8.5"
 stun-format = { version = "1.0.1", features = ["fmt", "rfc3489"] }
 serde = { version = "1.0", features = ["derive"] }
-dashmap = "6.0.1"
 crossbeam-skiplist = "0.1.3"
-async-trait = "0.1.81"
-thiserror = "1.0"
 async-scoped = { version = "0.9.0",features = ["use-tokio"] }
 
 [target.'cfg(target_os = "windows")'.dependencies]
