--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ dashmap = { workspace = true }
 rand = { workspace = true }
 protobuf = { version = "3.5.1", features = ["bytes"] }
 crossbeam-utils = "0.8"
+async-shutdown = "0.2.2"
 
 [build-dependencies]
 protobuf-codegen = "3.5.1"
