--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,13 +16,9 @@ bytes = { workspace = true }
 parking_lot = { workspace = true }
 dashmap = { workspace = true }
 rand = { workspace = true }
-protobuf = { version = "3.5.1", features = ["bytes"] }
 crossbeam-utils = "0.8"
 async-shutdown = "0.2.2"
-
-[build-dependencies]
-protobuf-codegen = "3.5.1"
-protoc-bin-vendored = "3.0.0"
+rmp-serde = "1.3.0"
 
 [dev-dependencies]
 clap = { version = "4.5.13", features = ["derive"] }
