--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ rand = { workspace = true }
 crossbeam-utils = "0.8"
 async-shutdown = "0.2.2"
 rmp-serde = "1.3.0"
+dns-parser = "0.8.0"
 
 [dev-dependencies]
 clap = { version = "4.5.13", features = ["derive"] }
