--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ clap = { version = "4.5.13", features = ["derive"] }
 log = "0.4.22"
 env_logger = "0.11.5"
 tun-rs = { version = "1", features = ["async"] }
+mimalloc-rust = { version = "0.2.1"}
 
 [[example]]
 name = "node"
