--- a/rustp2p-core/Cargo.toml
+++ b/rustp2p-core/Cargo.toml
@@ -26,6 +26,7 @@ stun-format = { version = "1.0.1", features = ["fmt", "rfc3489"] }
 serde = { version = "1.0", features = ["derive"] }
 crossbeam-skiplist = "0.1.3"
 async-scoped = { version = "0.9.0",features = ["use-tokio"] }
+async-lock = "3.4.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows-sys = { version = "0.59.0", features = ["Win32_Foundation",
