add readme and cargo clippy

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "rustp2p"
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
+readme = "README.md"
 repository = "https://github.com/rustp2p/rustp2p"
 
 [dependencies]
