--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustp2p"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 license = "Apache-2.0"
 readme = "README.md"
@@ -29,6 +29,7 @@ log = "0.4.22"
 env_logger = "0.11.5"
 tun-rs = { version = "1", features = ["async"] }
 mimalloc-rust = { version = "0.2.1"}
+pnet_packet = "0.35.0"
 
 [[example]]
 name = "node"
