--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustp2p"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2021"
 license = "Apache-2.0"
 readme = "README.md"
@@ -30,6 +30,7 @@ env_logger = "0.11.5"
 tun-rs = { version = "1", features = ["async"] }
 mimalloc-rust = { version = "0.2.1"}
 pnet_packet = "0.35.0"
+ctrlc2 = { version = "3", features = ["tokio", "termination"] }
 
 [[example]]
 name = "node"
