--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ rmp-serde = "1.3.0"
 dns-parser = "0.8.0"
 
 [dev-dependencies]
-clap = { version = "4.5.13", features = ["derive"] }
+clap = { version = "=4.0.32", features = ["derive"] }
 log = "0.4.22"
 env_logger = "0.11.5"
 tun-rs = { version = "1", features = ["async"] }
