--- a/rustp2p-core/Cargo.toml
+++ b/rustp2p-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust-p2p-core"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 license = "Apache-2.0"
 readme = "README.md"
@@ -28,7 +28,8 @@ crossbeam-skiplist = "0.1.3"
 async-scoped = { version = "0.9.0",features = ["use-tokio"] }
 async-lock = "3.4.0"
 libc = "0.2"
-nix = { version = "0.29", features = ["net"] }
+crossbeam-queue = "0.3.11"
+
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows-sys = { version = "0.59.0", features = ["Win32_Foundation",
