--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,5 @@
 [build]
-# target = ["x86_64-unknown-linux-musl"]
+ target = ["x86_64-unknown-linux-musl"]
 # target = ["x86_64-unknown-linux-gnu"]
 # target = ["aarch64-linux-android"]
 # target = ["x86_64-linux-android"]
