--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustp2p"
-version = "0.1.6"
+version = "0.1.7"
 edition = "2021"
 license = "Apache-2.0"
 readme = "README.md"
@@ -22,9 +22,10 @@ crossbeam-utils = "0.8"
 async-shutdown = "0.2.2"
 rmp-serde = "1.3.0"
 dns-parser = "0.8.0"
+crossbeam-queue = "0.3.11"
 
 [dev-dependencies]
-clap = { version = "4.5.13", features = ["derive"] }
+clap = { version = "=4.0.32", features = ["derive"] }
 log = "0.4.22"
 env_logger = "0.11.5"
 tun-rs = { version = "1", features = ["async"] }
