--- a/rustp2p-core/Cargo.toml
+++ b/rustp2p-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust-p2p-core"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 license = "Apache-2.0"
 readme = "README.md"
@@ -27,6 +27,9 @@ serde = { version = "1.0", features = ["derive"] }
 crossbeam-skiplist = "0.1.3"
 async-scoped = { version = "0.9.0",features = ["use-tokio"] }
 async-lock = "3.4.0"
+libc = "0.2"
+crossbeam-queue = "0.3.11"
+
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows-sys = { version = "0.59.0", features = ["Win32_Foundation",
@@ -42,7 +45,7 @@ ctrlc2 = "3.5"
 bytes = "1.7.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.124"
-clap = { version = "4.5.13", features = ["derive"] }
+clap = { version = "=4.0.32", features = ["derive"] }
 log = "0.4.22"
 env_logger = "0.11.5"
 
