--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ async-shutdown = "0.2.2"
 rmp-serde = "1.3.0"
 dns-parser = "0.8.0"
 crossbeam-queue = "0.3.11"
+ring = "0.17.8"
+sha2 = "0.10.8"
 
 [dev-dependencies]
 clap = { version = "=4.0.32", features = ["derive"] }
