--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,12 @@ bytes = { workspace = true }
 parking_lot = { workspace = true }
 dashmap = { workspace = true }
 rand = { workspace = true }
-crossbeam-utils = "0.8"
+crossbeam-utils = { workspace = true }
+crossbeam-queue = { workspace = true }
 async-shutdown = "0.2.2"
 rmp-serde = "1.3.0"
 dns-parser = "0.8.0"
-crossbeam-queue = "0.3.11"
+
 ring = "0.17.8"
 sha2 = "0.10.8"
 
@@ -55,3 +56,5 @@ parking_lot = "0.12"
 bytes = "1.7.1"
 dashmap = "6.1"
 rand = "0.8.5"
+crossbeam-utils = "0.8"
+crossbeam-queue = "0.3.11"
