--- a/rustp2p-core/Cargo.toml
+++ b/rustp2p-core/Cargo.toml
@@ -8,27 +8,28 @@ description = "Simple, fast and easy Nat traversal for peer-to-peer"
 repository = "https://github.com/rustp2p/rustp2p"
 
 [dependencies]
-anyhow = {workspace = true}
+anyhow = { workspace = true }
 log = { workspace = true }
 parking_lot = { workspace = true }
 tokio = { workspace = true }
 bytes = { workspace = true }
 dashmap = { workspace = true }
-async-trait = {workspace = true}
-thiserror =  {workspace = true}
+async-trait = { workspace = true }
+thiserror = { workspace = true }
 rand = { workspace = true }
+crossbeam-utils = { workspace = true }
+crossbeam-queue = { workspace = true }
+
 socket2 = { version = "0.5.7", features = ["all"] }
 network-interface = "2.0.0"
 futures = "0.3.30"
 tokio-util = { version = "0.7.11", features = ["full"] }
-crossbeam-utils = "0.8"
 stun-format = { version = "1.0.1", features = ["fmt", "rfc3489"] }
 serde = { version = "1.0", features = ["derive"] }
 crossbeam-skiplist = "0.1.3"
-async-scoped = { version = "0.9.0",features = ["use-tokio"] }
+async-scoped = { version = "0.9.0", features = ["use-tokio"] }
 async-lock = "3.4.0"
 libc = "0.2"
-crossbeam-queue = "0.3.11"
 
 
 [target.'cfg(target_os = "windows")'.dependencies]
