--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ description = "A decentralized p2p library powered by Rust, which is devoted to 
 repository = "https://github.com/rustp2p/rustp2p"
 
 [dependencies]
-rust-p2p-core = { path = "rustp2p-core", version = "0.1" }
+rust-p2p-core = { path = "rustp2p-core" }
 anyhow = { workspace = true }
 async-trait = { workspace = true }
 tokio = { workspace = true }
@@ -24,10 +24,11 @@ async-shutdown = "0.2.2"
 rmp-serde = "1.3.0"
 dns-parser = "0.8.0"
 
-ring = "0.17.8"
+ring = { version = "0.17.8", optional = true }
 sha2 = "0.10.8"
 
 [dev-dependencies]
+rustp2p = { path = "../rustp2p", features = ["aes-gcm"] }
 clap = { version = "=4.0.32", features = ["derive"] }
 log = "0.4.22"
 env_logger = "0.11.5"
@@ -58,3 +59,7 @@ dashmap = "6.1"
 rand = "0.8.5"
 crossbeam-utils = "0.8"
 crossbeam-queue = "0.3.11"
+
+[features]
+default = []
+aes-gcm = ["ring"]
