--- a/rustp2p-core/Cargo.toml
+++ b/rustp2p-core/Cargo.toml
@@ -30,6 +30,7 @@ crossbeam-skiplist = "0.1.3"
 async-scoped = { version = "0.9.0", features = ["use-tokio"] }
 async-lock = "3.4.0"
 libc = "0.2"
+dyn-clone = "1.0.17"
 
 
 [target.'cfg(target_os = "windows")'.dependencies]
