--- a/rustp2p-core/Cargo.toml
+++ b/rustp2p-core/Cargo.toml
@@ -11,7 +11,6 @@ repository = "https://github.com/rustp2p/rustp2p"
 anyhow = { workspace = true }
 log = { workspace = true }
 parking_lot = { workspace = true }
-tokio = { workspace = true }
 bytes = { workspace = true }
 dashmap = { workspace = true }
 async-trait = { workspace = true }
@@ -20,13 +19,18 @@ rand = { workspace = true }
 crossbeam-utils = { workspace = true }
 crossbeam-queue = { workspace = true }
 
+tachyonix = "0.3"
+async-broadcast = "0.7"
+tokio = { version = "1.41", features = ["full"],optional = true }
+async-io = { version = "2.3", optional = true }
+async-std = { version = "1.13", optional = true }
+futures-util = { version = "0.3", optional = true }
+
 socket2 = { version = "0.5.7", features = ["all"] }
 network-interface = "2.0.0"
 futures = "0.3.30"
-tokio-util = { version = "0.7.11", features = ["full"] }
 stun-format = { version = "1.0.1", features = ["fmt", "rfc3489"] }
 serde = { version = "1.0", features = ["derive"] }
-crossbeam-skiplist = "0.1.3"
 async-scoped = { version = "0.9.0", features = ["use-tokio"] }
 async-lock = "3.4.0"
 libc = "0.2"
@@ -41,6 +45,11 @@ windows-sys = { version = "0.59.0", features = ["Win32_Foundation",
     "Win32_System_IO",
     "Win32_System_Threading",
     "Win32_System_WindowsProgramming", ] }
+
+[features]
+default = ["async_tokio"]
+async_tokio = ["tokio"]
+async_std = [ "async-std","async-io","futures-util"]
 
 [dev-dependencies]
 ctrlc2 = "3.5"
