--- a/rustp2p-core/Cargo.toml
+++ b/rustp2p-core/Cargo.toml
@@ -47,7 +47,8 @@ windows-sys = { version = "0.59.0", features = ["Win32_Foundation",
     "Win32_System_WindowsProgramming", ] }
 
 [features]
-default = ["async_tokio"]
+default = ["async_std","tokio"]
+#default = ["async_tokio"]
 async_tokio = ["tokio"]
 async_std = [ "async-std","async-io","futures-util"]
 
