--- a/rustp2p-core/Cargo.toml
+++ b/rustp2p-core/Cargo.toml
@@ -21,7 +21,7 @@ crossbeam-queue = { workspace = true }
 
 tachyonix = "0.3"
 async-broadcast = "0.7"
-tokio = { version = "1.41", features = ["full"],optional = true }
+tokio = { version = "1.41", features = ["full"], optional = true }
 async-io = { version = "2.3", optional = true }
 async-std = { version = "1.13", optional = true }
 futures-util = { version = "0.3", optional = true }
@@ -31,7 +31,7 @@ network-interface = "2.0.0"
 futures = "0.3.30"
 stun-format = { version = "1.0.1", features = ["fmt", "rfc3489"] }
 serde = { version = "1.0", features = ["derive"] }
-async-scoped = { version = "0.9.0", features = ["use-tokio"] }
+async-scoped = { version = "0.9.0", optional = true }
 async-lock = "3.4.0"
 libc = "0.2"
 dyn-clone = "1.0.17"
@@ -47,11 +47,12 @@ windows-sys = { version = "0.59.0", features = ["Win32_Foundation",
     "Win32_System_WindowsProgramming", ] }
 
 [features]
-default = ["async_tokio"]
-async_tokio = ["tokio"]
-async_std = [ "async-std","async-io","futures-util"]
+default = ["async_std"]
+async_tokio = ["tokio", "async-scoped/use-tokio"]
+async_std = ["async-std", "async-io", "futures-util", "async-scoped/use-async-std"]
 
 [dev-dependencies]
+tokio = { version = "1.41", features = ["full"] }
 ctrlc2 = "3.5"
 bytes = "1.7.1"
 serde = { version = "1.0", features = ["derive"] }
