--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,10 +25,10 @@ jobs:
       run: cargo check --verbose
     - name: clippy
       if: ${{ !cancelled() }}
-      run: cargo clippy --all-targets --all-features -- -D warnings
+      run: cargo clippy --all-targets --features use-tokio --no-default-features -- -D warnings
     - name: Build
       if: ${{ !cancelled() }}
-      run: cargo build --verbose --examples --tests --all-features
+      run: cargo build --verbose --examples --tests
     - name: Abort on error
       if: ${{ failure() }}
       run: echo "Some of jobs failed" && false
