--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,10 @@ description = "A decentralized p2p library powered by Rust, which is devoted to 
 repository = "https://github.com/rustp2p/rustp2p"
 
 [dependencies]
-rust-p2p-core = { path = "rustp2p-core", version = "0.1" }
+rust-p2p-core = { path = "rustp2p-core", version = "0.1", default-features = false }
 anyhow = { workspace = true }
 async-trait = { workspace = true }
-tokio = { workspace = true }
+tokio = { workspace = true,optional = true }
 log = { workspace = true }
 thiserror = { workspace = true }
 bytes = { workspace = true }
@@ -26,6 +26,9 @@ dns-parser = "0.8.0"
 
 ring = { version = "0.17.8", optional = true }
 sha2 = "0.10.8"
+async-io = { version = "2.3", optional = true }
+async-std = { version = "1.13", optional = true }
+futures-util = { version = "0.3", optional = true }
 
 [dev-dependencies]
 rustp2p = { path = "../rustp2p", features = ["aes-gcm"] }
@@ -60,6 +63,8 @@ crossbeam-utils = "0.8"
 crossbeam-queue = "0.3.11"
 
 [features]
-default = []
+default = ["use-async-std"]
 aes-gcm = ["ring"]
 chacha20-poly1305 = ["ring"]
+use-tokio = ["rust-p2p-core/use-tokio","tokio"]
+use-async-std = ["rust-p2p-core/use-async-std","async-std", "async-io", "futures-util"]
