--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ log = "0.4.22"
 env_logger = "0.11.5"
 tun-rs = { version = "1", features = ["async"] }
 pnet_packet = "0.35.0"
-ctrlc2 = { version = "3", features = ["tokio", "termination"] }
+ctrlc2 = { version = "3", features = [ "termination"] }
 async-std = {version = "1.13.0",features = ["attributes","unstable"]}
 tokio = {version = "1.41.0",features = ["full"]}
 ctrlc = "3.4.5"
@@ -66,7 +66,7 @@ crossbeam-utils = "0.8"
 crossbeam-queue = "0.3.11"
 
 [features]
-default = ["use-async-std"]
+default = ["use-tokio"]
 aes-gcm = ["ring"]
 chacha20-poly1305 = ["ring"]
 use-tokio = ["rust-p2p-core/use-tokio","tokio"]
