--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ repository = "https://github.com/rustp2p/rustp2p"
 rust-p2p-core = { path = "rustp2p-core", version = "0.1", default-features = false }
 anyhow = { workspace = true }
 async-trait = { workspace = true }
-tokio = { workspace = true,optional = true }
+tokio = { workspace = true, optional = true }
 log = { workspace = true }
 thiserror = { workspace = true }
 bytes = { workspace = true }
@@ -20,26 +20,29 @@ dashmap = { workspace = true }
 rand = { workspace = true }
 crossbeam-utils = { workspace = true }
 crossbeam-queue = { workspace = true }
+tachyonix = { workspace = true }
+async-std = { workspace = true, optional = true }
+async-io = { workspace = true, optional = true }
+futures-util = { workspace = true, optional = true }
+
+
 async-shutdown = "0.2.2"
 rmp-serde = "1.3.0"
 dns-parser = "0.8.0"
 
 ring = { version = "0.17.8", optional = true }
 sha2 = "0.10.8"
-async-io = { version = "2.3", optional = true }
-async-std = { version = "1.13", optional = true }
-futures-util = { version = "0.3", optional = true }
 
 [dev-dependencies]
 rustp2p = { path = "../rustp2p", features = ["aes-gcm"] }
 clap = { version = "=4.0.32", features = ["derive"] }
 log = "0.4.22"
 env_logger = "0.11.5"
-tun-rs = { version = "1", features = ["async"] }
+tun-rs = { git = "https://github.com/xmh0511/tun-rs", features = ["async_tokio"] }
 pnet_packet = "0.35.0"
-ctrlc2 = { version = "3", features = [ "termination"] }
-async-std = {version = "1.13.0",features = ["attributes","unstable"]}
-tokio = {version = "1.41.0",features = ["full"]}
+ctrlc2 = { version = "3", features = ["termination"] }
+async-std = { version = "1.13.0", features = ["attributes", "unstable"] }
+tokio = { version = "1.41.0", features = ["full"] }
 ctrlc = "3.4.5"
 
 [[example]]
@@ -53,9 +56,13 @@ members = [
 ]
 
 [workspace.dependencies]
-anyhow = "1.0.86"
-thiserror = "1.0.63"
-tokio = { version = "1.39.2", features = ["full"] }
+futures-util = "0.3"
+async-io = "2.3"
+async-std = "1.13"
+tachyonix = "0.3"
+anyhow = "1"
+thiserror = "2"
+tokio = { version = "1.41", features = ["full"] }
 async-trait = "0.1.81"
 log = "0.4.17"
 parking_lot = "0.12"
@@ -69,5 +76,5 @@ crossbeam-queue = "0.3.11"
 default = ["use-tokio"]
 aes-gcm = ["ring"]
 chacha20-poly1305 = ["ring"]
-use-tokio = ["rust-p2p-core/use-tokio","tokio"]
-use-async-std = ["rust-p2p-core/use-async-std","async-std", "async-io", "futures-util"]
+use-tokio = ["rust-p2p-core/use-tokio", "tokio"]
+use-async-std = ["rust-p2p-core/use-async-std", "async-std", "async-io", "futures-util"]
