--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,9 +29,10 @@ dns-parser = "0.8"
 ring = { version = "0.17", optional = true }
 sha2 = "0.10"
 flume = { version = "0.11.1", features = ["async"] }
-kcp = { version = "0.5.3" }
+kcp = { version = "0.5.3", optional = true }
 tokio-util = "0.7"
 futures = "0.3.31"
+
 [dev-dependencies]
 rustp2p = { path = "../rustp2p", features = ["aes-gcm"] }
 clap = { version = "=4.0.32", features = ["derive"] }
@@ -45,6 +46,11 @@ ctrlc = "3.4.5"
 [[example]]
 name = "node"
 path = "examples/node.rs"
+
+[[example]]
+name = "node_kcp_stream"
+path = "examples/node_kcp_stream.rs"
+required-features = ["use-kcp"]
 
 [workspace]
 resolver = "2"
@@ -69,3 +75,4 @@ crossbeam-queue = "0.3"
 default = []
 aes-gcm = ["ring"]
 chacha20-poly1305 = ["ring"]
+use-kcp = ["kcp"]
