--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,14 +25,14 @@ tokio-util = { workspace = true }
 async-shutdown = { workspace = true }
 rmp-serde = "1.3"
 dns-parser = "0.8"
-
+openssl = { version = "0.10", optional = true }
 ring = { version = "0.17", optional = true }
 sha2 = "0.10"
 
 futures = "0.3.31"
 
 [dev-dependencies]
-rustp2p = { path = "../rustp2p", features = ["aes-gcm"] }
+rustp2p = { path = "../rustp2p", features = ["aes-gcm-ring"] }
 clap = { version = "=4.0.32", features = ["derive"] }
 log = "0.4.22"
 env_logger = "0.11.5"
@@ -75,6 +75,8 @@ async-shutdown = "0.2"
 
 [features]
 default = []
-aes-gcm = ["ring"]
-chacha20-poly1305 = ["ring"]
+aes-gcm-openssl = ["openssl"]
+chacha20-poly1305-openssl = ["openssl"]
+aes-gcm-ring = ["ring"]
+chacha20-poly1305-ring = ["ring"]
 use-kcp = ["kcp"]
