--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustp2p"
-version = "0.3.1"
+version = "0.3.2"
 edition = "2021"
 license = "Apache-2.0"
 readme = "README.md"
@@ -39,6 +39,7 @@ env_logger = "0.11.5"
 tun-rs = { version = "2.0.9", features = ["async_tokio"] }
 pnet_packet = "0.35.0"
 tokio = { version = "1.42", features = ["full"] }
+tokio-util = { version = "0.7.15", features = ["full"] }
 ctrlc = "3.4.5"
 
 [[example]]
@@ -69,7 +70,7 @@ dashmap = "6.1"
 rand = "0.9"
 crossbeam-utils = "0.8"
 crossbeam-queue = "0.3"
-kcp = "0.6.0"
+kcp = {version = "0.6.0",features = ["tokio"]}
 tokio-util = "0.7"
 flume = { version = "0.11.1", features = ["async"] }
 async-shutdown = "0.2"
