--- a/rustp2p-core/Cargo.toml
+++ b/rustp2p-core/Cargo.toml
@@ -50,6 +50,9 @@ clap = { version = "=4.0.32", features = ["derive"] }
 log = "0.4.22"
 env_logger = "0.11.5"
 
+[features]
+sendmmsg=[]
+
 [[example]]
 name = "server"
 path = "examples/server.rs"
