--- a/rustp2p-c-ffi/Cargo.toml
+++ b/rustp2p-c-ffi/Cargo.toml
@@ -3,7 +3,9 @@ name = "rustp2p-c-ffi"
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
+readme = "README.md"
 description = "C FFI bindings for rustp2p"
+repository = "https://github.com/rustp2p/rustp2p"
 
 [lib]
 crate-type = ["cdylib", "staticlib"]
